--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "types": "build/rendertron.d.ts",
   "bin": "bin/rendertron",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run copiar-archivo",
+    "copiar-archivo": "cp src/rendertron.js build/rendertron.js",
     "prepack": "npm run build",
     "start": "node build/rendertron.js",
     "format": "find src -name '*.ts' | xargs clang-format --style=file -i",
